# django-url-shortener-api

./: .deepsource.toml  README.md  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py
urlshortener/: settings.py
