[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = "A simple Postgres backed URL shortener made using Django REST framework."
authors = ["Harsh Navdhare <navdhareharsh2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
